# DnD

./: README.md
main/: cmd_dnd.sh  environment.yml  pyproject.toml
main/environment/: environment.yml  install_packages.R
main/filter/: hg38-blacklist.v2.bed  source.txt
main/genome/: link_your_fasta.txt
main/src/: dnd_pt1.py  dnd_pt2.py  dnd_pt3.py  dnd_pt4.py  dnd_to_mtx.py  man
main/src/app_src/: app_extend_xbp.R  app_resize.R  app_resize_narrowPeak.R  app_snvContext_v2.R  plot_context.R  plot_motifCenteredCounts_encode.R  plot_tf_offset.R
main/src/archive/__old__/: dnd_pt1.py  step2.py
main/src/archive/v1/: dnd_pt1.py
main/src/archive/v1/main/: step3.py  step6.py  tools.R
main/src/main/: dnd_acc.py  step1.py  step2.py  step4.py  step5.py  step6.py  tools.R
